<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigation.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/welcomeConstraint"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:text="@string/welcome"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/user_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/userImg">

                <RadioButton
                    android:id="@+id/read_tutorial_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tutorial" />

                <RadioButton
                    android:id="@+id/convert_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conversion" />

                <RadioButton
                    android:id="@+id/take_quiz_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quiz" />
            </RadioGroup>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_options" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userImg"
                android:layout_width="177dp"
                android:layout_height="148dp"
                android:layout_marginTop="34dp"
                android:src="@drawable/profile"
                android:contentDescription="@string/user_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcomeText"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="193dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>




</layout>