<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigation.QuizFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/question_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:id="@+id/q1_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_one">

                <RadioButton
                    android:id="@+id/q1_celsius_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q1_fahrenheit_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q1_kelvin_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:layout_marginRight="20dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/q1_choices"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:id="@+id/q2_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_two">

                <RadioButton
                    android:id="@+id/q2_celsius_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q2_fahrenheit_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q2_kelvin_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:layout_marginRight="20dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/q2_choices"
                android:layout_marginTop="20dp"
                />

            <RadioGroup
                android:id="@+id/q3_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_three">

                <RadioButton
                    android:id="@+id/q3_celsius_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q3_fahrenheit_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fahrenheit"
                    android:layout_marginRight="20dp"/>

                <RadioButton
                    android:id="@+id/q3_kelvin_option"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:layout_marginRight="20dp"/>

            </RadioGroup>

            <TextView
                android:id="@+id/question_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/q4"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/q3_choices" />

            <RadioGroup
                android:id="@+id/q4_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_four">

                <RadioButton
                    android:id="@+id/q4_option_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q4_option_one" />

                <RadioButton
                    android:id="@+id/q4_option_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q4_option_two" />

                <RadioButton
                    android:id="@+id/q4_option_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q4_option_three" />

            </RadioGroup>

            <TextView
                android:id="@+id/question_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/q5"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/q4_choices" />

            <RadioGroup
                android:id="@+id/q5_choices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/question_five">

                <RadioButton
                    android:id="@+id/q5_option_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q5_option_one" />

                <RadioButton
                    android:id="@+id/q5_option_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q5_option_two" />

                <RadioButton
                    android:id="@+id/q5_option_three"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/q5_option_three" />
            </RadioGroup>

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/q5_choices" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>