<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.navigation.AboutFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/gameConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/about"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/userImg"
            android:layout_width="177dp"
            android:layout_height="148dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/user_profile"
            android:src="@drawable/thermometer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/app_desc"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userImg" />

        <TextView
            android:id="@+id/developerContacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Developer Contacts"
            android:layout_marginTop="45dp"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/email"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="Email: qfveatabay@tip.edu.ph"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/developerContacts" />

        <TextView
            android:layout_width="500dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="LinkedIn: https://www.linkedin.com/in/fj-vincent-atabay"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>